// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar autoscroll 1`] = `
<NoticeBar
  autoscroll={true}
  hasArrow={false}
  hasClosable={false}
  icon={
    <Icon
      prefixCls="za-icon"
      type="broadcast"
    />
  }
  prefixCls="za-noticebar"
  theme="warning"
>
  <Message
    hasArrow={false}
    hasClosable={false}
    icon={
      <Icon
        prefixCls="za-icon"
        type="broadcast"
      />
    }
    prefixCls="za-message"
    size="lg"
    theme="warning"
  >
    <div
      className="za-message theme-warning size-lg"
      onClick={false}
    >
      <div
        className="za-message-header"
      >
        <div
          className="za-message-icon"
        >
          <Icon
            prefixCls="za-icon"
            type="broadcast"
          >
            <i
              className="za-icon za-icon-broadcast"
            />
          </Icon>
        </div>
      </div>
      <div
        className="za-message-body"
      >
        <div
          className="za-noticebar"
        >
          <div
            className="za-noticebar-body"
            style={
              Object {
                "left": 0,
              }
            }
          >
            各位zarmer请注意，本组件使用了自动滚动功能，更多用法请参见使用文档。
          </div>
        </div>
      </div>
    </div>
  </Message>
</NoticeBar>
`;

exports[`NoticeBar icon 1`] = `
<div
  class="za-message theme-warning size-lg"
>
  <div
    class="za-message-header"
  >
    <div
      class="za-message-icon"
    >
      <img
        alt=""
        src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
      />
    </div>
  </div>
  <div
    class="za-message-body"
  >
    <div
      class="za-noticebar"
    >
      <div
        class="za-noticebar-body"
        style="left:0;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`NoticeBar renders correctly 1`] = `
<NoticeBar
  autoscroll={false}
  hasArrow={false}
  hasClosable={false}
  icon={
    <Icon
      prefixCls="za-icon"
      type="broadcast"
    />
  }
  prefixCls="za-noticebar"
  theme="warning"
>
  <Message
    hasArrow={false}
    hasClosable={false}
    icon={
      <Icon
        prefixCls="za-icon"
        type="broadcast"
      />
    }
    prefixCls="za-message"
    size="lg"
    theme="warning"
  >
    <div
      className="za-message theme-warning size-lg"
      onClick={false}
    >
      <div
        className="za-message-header"
      >
        <div
          className="za-message-icon"
        >
          <Icon
            prefixCls="za-icon"
            type="broadcast"
          >
            <i
              className="za-icon za-icon-broadcast"
            />
          </Icon>
        </div>
      </div>
      <div
        className="za-message-body"
      >
        <div
          className="za-noticebar"
        >
          <div
            className="za-noticebar-body"
            style={
              Object {
                "left": 0,
              }
            }
          >
            foo
          </div>
        </div>
      </div>
    </div>
  </Message>
</NoticeBar>
`;

exports[`NoticeBar theme 1`] = `
<div
  class="za-message theme-error size-lg"
>
  <div
    class="za-message-header"
  >
    <div
      class="za-message-icon"
    >
      <i
        class="za-icon za-icon-broadcast"
      />
    </div>
  </div>
  <div
    class="za-message-body"
  >
    <div
      class="za-noticebar"
    >
      <div
        class="za-noticebar-body"
        style="left:0;"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;
